--- a/index.html
+++ b/index.html
@@ -3,10 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
-<body>
-    
-</body>
+
+<header class="cabecalho">
+    <img class="cabecalho-imagem" src="./img/alurastart logo 1.png" alt="logo da alura start">
+    <ul class="cabecalho-lista-item">
+        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Escola</li>
+    </ul>
+</header>
+
+<section class="escola">
+    <div class="escola-conteudo">
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de
+            ensinar Pensamento Computacional através da Programação.</p>
+        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma
+            diversa e engajada, as vezes, um pouco bagunceira, mas
+            que entrega excelentes resultados!</p>
+    </div>
+    <img class="escola-imagem" src="./img/Formula-amico 1.png" alt="professora no quadro">
+</section>
+<section class="estudante">
+    <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-todos">
+        <span></span>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <span></span>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+        <div class="estudante-div">
+            <img clas="estudante-imagem" src="./img/Marcelo 1.png" alt="Foto do estudante Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://www.instagram.com" target="_blank"><img class="estudante-icone" src="./img/instagram.png" alt="Instagram"></a>
+            <a href="https://github.com" target="_blank"><img class="estudante-icone" src="./img/github.png" alt="Github"></a>
+            <a href="https://www.linkedin.com" target="_blank"><img class="estudante-icone" src="./img/linkedin.png" alt="LinkedIn"></a>
+        </div>
+    </div>
+</section>
+<footer>
+    <img src="./img/alurastart logo 1.png" alt="logo da alura start">
+</footer>
 </html>
